# StellarStack

./: .cleanup-rollback-point.txt  .dockerignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierignore  CHANGELOG.md  CHANGELOG_DETAILED.md  CONTRIBUTING.md  DAEMON_STANDARDS.md  DEEPDIVE_INDEX.md  DEEPDIVE_SUMMARY.md  Dockerfile  FEATURES.md  FEATURE_1_COMPLETE_SUMMARY.md  FEATURE_1_SUMMARY.md  FEATURE_1_TESTING_GUIDE.md  FILE_MANIFEST.md  IMPLEMENTATION_RULES.md  IMPLEMENTATION_TRACKING.md  INSTALLER_ANALYSIS.md  LICENSE  PAGES_DOCUMENTATION.md  PHASE_4_IMPLEMENTATION.md  PLUGIN_DAEMON_INTEGRATION.md  README.md  ROADMAP.md  STELLAR_ANALYSIS_AND_RECOMMENDATIONS.md  claude.md  cleanup_mounted.ps1  commit-analysis.csv  commit-files.txt  commit-mappings.txt  install-script.sh  install.sh  opencode.json  package.json  pnpm-lock.yaml  reddit-post.md  release-please-config.json  (+8 more)
.claude/: settings.local.json  settings.local.json.bak
.github/: AI_CHANGELOG_SETUP.md  IMPLEMENTATION_COMPLETE.md  OLLAMA_INTEGRATION.md
.husky/: pre-commit
Installer/: CROSS_PLATFORM_BUILD.md  CROSS_PLATFORM_COMPLETE.md  GITHUB_ACTIONS_SETUP.md  INTEGRATION_SUMMARY.md  PLATFORM_COMPATIBILITY_AUDIT.md  QUICK_START.md  README.md  build-all-platforms.bat  build-all-platforms.ps1  build-all-platforms.sh  distinstaller-linux-x86_64  go.mod  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  docker.rs  lib.rs  macos.rs  main.rs  setup.rs  sidecar.rs  tray.rs
(+1161 files in other folders)
