[package]
name = "stellar-desktop"
version = "0.1.0"
edition = "2021"
description = "StellarStack Desktop Application"

[lib]
name = "stellar_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"

# Docker API
bollard = "0.17"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"
hex = "0.4"
thiserror = "1"
anyhow = "1"
url = "2"

# Async streams
futures = "0.3"
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"
